# subedit

./: .gitignore  pyproject.toml
guia/: guia_de_classe.md
src/subedit/: __init__.py  adapter.py  asset_builder.py  assets.py  custom_exceptions.py  factory.py  info.py  interface.py  media_enums.py  path_builder.py  path_manager.py  readers.py  subedit.py  utils.py
teste/: teste.json
tests/: data.py  test_adapter.py  test_asset_builder.py  test_assets.py  test_factory.py  test_info.py  test_media_enums.py  test_path_builder.py  test_path_manager.py  test_subedit.py
