[project]
name = "subedit"
version = "0.1.0"
description = ""
authors = [
    {name = "Guilherme", email = "XXXX@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "loguru>=0.7.3,<0.8.0",
    "pathlib3x>=2.0.3,<3.0.0"
]

# 1. Scripts migrados para o padrão oficial PEP 621
[project.scripts]
subedit = "subedit.subedit:app"

# 2. Mudança do Build System para Hatchling (padrão recomendado para uv)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configuração para encontrar o pacote em 'src'
[tool.hatch.build.targets.wheel]
packages = ["src/subedit"]

# 3. Grupos de dependência no padrão uv
[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.0",
    "ipdb>=0.13.13"
]
